Allow access for Spark KryoSerializer